# Google-search-to-JSON

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py
static/: dummy.json  index.js  style.css
templates/: index.html
tests/: test_app.py
